--- a/Code/4b_Sentimental analysis_Reg_log.ipynb
+++ b/Code/4b_Sentimental analysis_Reg_log.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -48,21 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# chemins\n",
     "\n",
-    "# os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
-    "os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp')\n",
+    "os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
+    "#os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp')\n",
     "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
     "#os.chdir('/home/aqlt/Documents/Ensae/StatApp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,6 +522,109 @@
     "    plt.boxplot(data)\n",
     "    pylab.xticks([1,2,3], BoxName)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mots inconnus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/sentimental_analysis/corpus_test_sncf.file\", \"rb\") as f:\n",
+    "    corpus_test = pickle.load(f)\n",
+    "with open(\"data/sentimental_analysis/corpus_train_sncf.file\", \"rb\") as f:\n",
+    "    corpus_train = pickle.load(f)\n",
+    "with open(\"data/sentimental_analysis/corpus_test.file\", \"rb\") as f:\n",
+    "    corpus_test_git = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrases_train = [tweet.split() for (score, tweet) in corpus_train]\n",
+    "mots_train = [item for sublist in phrases_train for item in sublist]\n",
+    "vocabulaire_train = list(dict.fromkeys(mots_train))\n",
+    "phrases_test = [tweet.split() for (score, tweet) in corpus_test]#corpus_test_git si on veut les stats pour base GIT\n",
+    "mots_test = [item for sublist in phrases_test for item in sublist]\n",
+    "vocabulaire_test = list(dict.fromkeys(mots_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_test = {mot:0 for mot in vocabulaire_test}\n",
+    "for phrase in phrases_test:\n",
+    "    for mot in phrase:\n",
+    "        app_test[mot] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9809\n",
+      "140018\n"
+     ]
+    }
+   ],
+   "source": [
+    "compt = 0\n",
+    "compt_mot = 0\n",
+    "for mot in vocabulaire_test:\n",
+    "    find1 = False\n",
+    "    find2 = False\n",
+    "    for word in model1.wv.index2word:\n",
+    "        # Ce qu'on trouve\n",
+    "        if mot == word:\n",
+    "            find1 = True\n",
+    "    for word in vocabulaire_train:\n",
+    "        # Ce qu'on trouve\n",
+    "        if mot == word:\n",
+    "            find2 = True   \n",
+    "    if find1 and find2:     \n",
+    "        compt = compt +1\n",
+    "        compt_mot = compt_mot + app_test[mot]\n",
+    "print(compt)\n",
+    "print(compt_mot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.18917512360135\n",
+      "4.672489974877622\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Part des mots du voc non en commun\n",
+    "print(100*(len(vocabulaire_test) - compt)/len(vocabulaire_test))\n",
+    "# Part des mots du corpus non en commun\n",
+    "print(100*(len(mots_test) - compt_mot)/len(mots_test))"
    ]
   },
   {
@@ -2838,7 +2932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
